--- a/index.css
+++ b/index.css
@@ -23,6 +23,16 @@ body {
     width: 50%;
     height: 780px;
     background-color: aliceblue;
+    text-align: center;
+}
+
+#left-digimon-info img {
+    width: 300px;
+    height: 300px;
+    border: 1px solid black;
+    border-radius: 10px;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 /* Right container to display Digimon list */
