--- a/index.css
+++ b/index.css
@@ -35,6 +35,16 @@ body {
     margin-bottom: 30px;
 }
 
+/* Left Digimon-types styling */
+.type-box {
+    margin: 5px;
+    border: 1px solid black;
+    border-radius: 10px;
+    padding: 10px;
+    background-color: white;
+    font-weight: bold;
+}
+
 /* Right container to display Digimon list */
 #digimon-list {
     width: 50%;
