--- a/index.css
+++ b/index.css
@@ -45,6 +45,15 @@ body {
     font-weight: bold;
 }
 
+/* Left Digimon Description Box */
+#digimon-description {
+    margin: 20px;
+    border: 1px solid black;
+    border-radius: 10px;
+    padding: 10px;
+    background-color: white;
+}
+
 /* Right container to display Digimon list */
 #digimon-list {
     width: 50%;
