--- a/index.css
+++ b/index.css
@@ -42,6 +42,15 @@ h1 {
     margin-bottom: 30px;
 }
 
+#yearReleased {
+    margin: 20px;
+    border: 1px solid black;
+    border-radius: 10px;
+    padding: 10px;
+    background-color: white;
+    font-weight: bold;
+}
+
 /* Left Digimon-types styling */
 .type-box {
     margin: 5px;
@@ -59,7 +68,6 @@ h1 {
     border-radius: 10px;
     padding: 10px;
     background-color: white;
-    overflow-y: auto;
 }
 
 /* Right container to display Digimon list */
