--- a/index.css
+++ b/index.css
@@ -49,6 +49,7 @@ h1 {
     padding: 10px;
     background-color: white;
     font-weight: bold;
+    display: flex;
 }
 
 /* Left Digimon-types styling */
@@ -68,6 +69,9 @@ h1 {
     border-radius: 10px;
     padding: 10px;
     background-color: white;
+    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
 }
 
 /* Right container to display Digimon list */
