--- a/index.css
+++ b/index.css
@@ -69,8 +69,9 @@ h1 {
     border-radius: 10px;
     padding: 10px;
     background-color: white;
-    overflow-y: auto
+    overflow-y: auto;
 }
+
 
 /* Right container to display Digimon list */
 #digimon-list {
