--- a/index.css
+++ b/index.css
@@ -70,6 +70,7 @@ nav.navbar {
     border-radius: 10px;
     margin-top: 30px;
     margin-bottom: 30px;
+    background-color: white;
 }
 
 /* Left Digimon-names styling */
